fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -57,11 +57,11 @@
     line-height: 36px;
 }
 
-.author-info-image:nth-child(n+1){
+.author-info-image:nth-child(n+2){
 	padding: 40px 20px 20px 20px;
 }
 
-.author-info-description:nth-child(n+1){
+.author-info-description:nth-child(n+2){
 	padding-top: 40px;
 }
 	
